<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.LoginActivity">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="注册"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </androidx.appcompat.widget.Toolbar>-->

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/app_logo_desc"
        android:src="@mipmap/app_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_subTitle"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <LinearLayout
        android:id="@+id/ll_loginOrRegisterText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subTitle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_loginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_loginOrRegister"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/view_tv_title_line"
            app:cardBackgroundColor="#946DDA"
            android:layout_gravity="bottom|start"
            android:layout_width="50sp"
            android:layout_height="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loginOrRegisterForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_loginOrRegisterText"
        >
        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="#EEEEEEEE"
            app:contentPadding="10dp"
            app:contentPaddingRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/login_phone_prefix"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#717171"/>
                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:hint="@string/et_loginOrRegisterHintText"
                    android:background="#EEEEEEEE"
                    android:textCursorDrawable="@null"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#EEEEEEEE"
            app:contentPadding="10dp"
            app:contentPaddingRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:src="@drawable/ic_login_register_password"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#717171"/>
                <EditText
                    android:id="@+id/et_loginOrRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:hint="@string/et_loginPasswordHintText"
                    android:background="#EEEEEEEE"
                    android:textCursorDrawable="@null"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_verifyCode"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#EEEEEEEE"
            app:contentPadding="10dp"
            app:contentPaddingRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:src="@drawable/ic_login_register_code"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#717171"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_registerCode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#EEEEEEEE"
                        android:hint="@string/et_registerHintText"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="end|center"
                    android:layout_width="120dp"
                    android:layout_height="40dp">
                    <Button
                        android:id="@+id/btn_sendSmsCode"
                        android:visibility="visible"
                        android:stateListAnimator="@null"
                        android:background="@drawable/btn_normal_style"
                        android:text="@string/login_tv_sendSmsCode"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"/>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_changeType"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:text="@string/login_tv_changeLoginType"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_circle_select"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_loginOrRegisterForm" />

</androidx.constraintlayout.widget.ConstraintLayout>